# HarnessDML

./: .env.template  .gitignore  CLAUDE.md  ESTIMANDS.md  README.md  pyproject.toml
configs/: env.yaml  model_revisions.lock.yaml  models.yaml
configs/experiments/: mvp_grid.yaml  mvp_headline_topup.yaml  mvp_thin_gsm8k.yaml  pilot.yaml  smoke_live.yaml
configs/tasks/: gsm8k.jsonl  gsm8k_ids.json  gsm8k_meta.json  hotpotqa.jsonl  hotpotqa_ids.json  hotpotqa_meta.json  math.jsonl  math_ids.json  math_meta.json  musique.jsonl  musique_ids.json  musique_meta.json
docs/: ARCHITECTURE.md  DECISIONS.md  OVERVIEW.md  PROGRESS.md  RUNBOOK.md
harnesslab/: __init__.py  aggregate.py  benchmarks.py  cli.py  experiment.py  fits.py  manifest.py  panel.py  protocol.py  schedule.py  tasks.py
harnesslab/agent/: __init__.py  loop.py  runner.py
harnesslab/client/: base.py  (+4 more)
legacy/hal-reanalysis/: .env.template  CLAUDE.md  README-halcausal.md  README.md  pyproject.toml
legacy/hal-reanalysis/configs/: estimand_reasoning_taubench.yaml
legacy/hal-reanalysis/notebooks/: 01_download_decrypt.ipynb  02_build_panel.ipynb  04_estimate.ipynb  05_export_results.ipynb
legacy/hal-reanalysis/reports/: hf_inventory.md
legacy/hal-reanalysis/results/explore/taubench_airline/: aggregate.json  runs.json
legacy/hal-reanalysis/schema/: SCHEMA.md  column_roles.yaml  field_mapping.yaml  paths.json
legacy/hal-reanalysis/scripts/: check_results_size.py
legacy/hal-reanalysis/src/halcausal/: __init__.py  guards.py  paths.py
legacy/hal-reanalysis/src/halcausal/estimation/: __init__.py
legacy/hal-reanalysis/src/halcausal/etl/: __init__.py  discover_schema.py
legacy/hal-reanalysis/src/halcausal/io/: __init__.py  decrypt.py
legacy/hal-reanalysis/tests/: test_decrypt.py  test_discover_schema.py  test_explore.py  test_guards.py  test_manifest.py
notebooks/: 00_hpc_setup.ipynb  01_download_decrypt.ipynb  03_diagnostics.ipynb
reports/: discrepancies.md  explore_taubench_airline.md  hf_inventory.json
results/: README.md
schema/: column_roles.yaml  field_mapping.suggested.yaml  panel_schema.yaml
scripts/: build_tasks.py  regen_goldens.py  slurm_template.sbatch
slurm/: aggregate.sbatch  probe.sbatch  run_experiment.sbatch
tests/: test_components_golden.py  test_explore.py  test_graders.py  test_metrics.py  test_panel_guard.py  test_protocol_loop.py  test_provisioning.py  test_results_guard.py  test_runner_e2e.py  test_schedule.py  test_schemas.py  test_size_guard.py  test_store.py  test_tools.py
(+124 files in other folders)
