[project]
name = "harnesslab"
version = "0.0.1"
description = "Factorial experiment platform: causal effects of agent-harness components on accuracy, cost, consistency, and calibration (open weights, vLLM, JUPITER)"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "sympy>=1.12",
    "asteval>=1.0",
    "httpx>=0.27",
    "polars>=1.20",
    "pyarrow>=17",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# task-list building (login node / local) + model prefetch; compute nodes
# never need these
data = [
    "datasets>=3.0",
    "huggingface-hub>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harnesslab"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
