[project]
name = "halcausal"
version = "0.1.0"
description = "Causal re-analysis of HAL agent rollouts (arXiv:2510.11977) via Double Machine Learning — split local/HPC workflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.30",
    "cryptography>=42",
    "polars>=1.20",
    "pyarrow>=17",
    "doubleml>=0.9",
    "lightgbm>=4.5",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "matplotlib>=3.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# HPC-side notebook execution only; local env does not need these.
hpc = [
    "papermill>=2.6",
    "ipykernel>=6.29",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/halcausal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
